# Atlas

./: .gitignore  atlas.py  config.json  pyproject.toml  run.ipynb
notebooks/: blocks.ipynb  epic.ipynb  expression_data_curation.ipynb  genes_names_mapper.ipynb  methylation_data_curation.ipynb  prepare_sample_sheets.ipynb
notebooks/src/: block.py  blocks_finder.py
src/: blocks.py  build_manifest_flow.py  config.py  data_proceesing_flow.py
