[tool.poetry]
name = "atlas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
plotly = "^5.18.0"
jupyterlab = "^4.0.8"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
tqdm = "^4.66.1"
pyarrow = "^14.0.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
mygene = "^3.2.2"
pydeseq2 = "^0.4.1"
geoparse = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
